--- a/client/src/components/ui/File/file.module.scss
+++ b/client/src/components/ui/File/file.module.scss
@@ -1,1 +1,37 @@
 @import '../../../style/variables.scss';
+
+.file {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    border-bottom: 3px solid $blue;
+    padding: 8px 15px;
+    align-items: center;
+    transition: .3s;
+
+    &:hover {
+        background: lighten($color: $blue, $amount: 40px);
+        .buttons {
+            display: block;
+        }
+    }
+}
+
+.buttons {
+    transition: .3s;
+    display: none;
+}
+
+
+.item {
+    display: flex;
+    align-items: center;
+
+    & div {
+        margin-left: 30px;
+    }
+
+    & img {
+        margin-left: 15px;
+    }
+}
