--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -5,6 +5,7 @@ body {
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: $blue;
+    background: $bg_color;
 }
 
 * {
@@ -13,6 +14,6 @@ body {
 
 .app {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: $bg_color;
 }
